--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prettier": "prettier --write '@(packages|scripts)/**/*.@(js|css)' '*.js'",
     "prettier:check": "prettier --list-different '@(packages|scripts)/**/*.@(js|css)' '*.js'",
     "stage:venia": "cd packages/venia-concept && npm start; cd - >/dev/null",
-    "storybook:venia": "cd packages/venia-concept && npm run storybook",
+    "storybook:venia": "cd packages/venia-concept && npm run storybook; cd - >/dev/null",
     "test": "jest",
     "test:ci": "npm run -s test -- -i --json --outputFile=test-results.json",
     "test:debug": "node --inspect-brk node_modules/.bin/jest -i",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@magento/directive-parser": "^0.1.1",
     "@magento/eslint-config": "^1.2.3",
-    "@storybook/react": "^3.4.2",
+    "@storybook/react": "^4.0.9",
     "apollo-boost": "^0.1.20",
     "apollo-cache-inmemory": "^1.3.9",
     "apollo-client": "^2.4.5",
