--- a/packages/venia-concept/package.json
+++ b/packages/venia-concept/package.json
@@ -24,7 +24,8 @@
     "start:debug": "node --inspect-brk ./node_modules/.bin/webpack-dev-server --progress --color --env.mode development",
     "test": "jest src",
     "validate-queries": "node ./validate-queries.js",
-    "watch": "webpack-dev-server --progress --color --env.mode development"
+    "watch": "webpack-dev-server --progress --color --env.mode development",
+    "storybook": "start-storybook -p 6006"
   },
   "dependencies": {
     "@magento/eslint-config": "^1.2.3",
